# web-scraping

./: .gitignore  docker-compose.yml  settings.gradle
cli-crawler/: Cargo.toml  rustfmt.toml
cli-crawler/src/: crawlers.rs  lib.rs  main.rs
cli-crawler/src/crawlers/: entities.rs  sinks.rs  states.rs
cli-crawler/src/tools/: url.rs
cli-crawler/tests/: integration_test.rs
common/: build.gradle
common/src/main/scala/com/gmail/wristylotus/tools/: Constants.scala
content-processor/: build.gradle
content-processor/src/main/scala/com/gmail/wristylotus/: PagesContentAnalyser.scala
gradle/: libs.versions.toml
