[package]
name = "cli-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15"
scraper = "0.18.1"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
diesel = { version = "2.1.0", features = ["postgres"] }

[dependencies.redis]
git = "https://github.com/redis-rs/redis-rs.git"

